--- a/webportal/webapp/src/app/main/home/home.component.html
+++ b/webportal/webapp/src/app/main/home/home.component.html
@@ -1,5 +1,81 @@
+<!--<div class="container">-->
+    <!--<div class="row">-->
+    <!--<img style="width: 100%" src="../../assets/images/background-home.png" class="mx-auto d-block">-->
+    <!--</div>-->
+<!--</div>-->
+
+<!--<div class="container">-->
+    <!--<mat-card>-->
+        <!--<div class="row">-->
+            <!--<h3>Frequently Asked Questions</h3>-->
+            <!--<mat-card-content style="padding: 20px;">-->
+                <!--<div id="sdc">-->
+                    <!--<span class="questionText">1) What is Secure Data Commons Platform?</span><br>-->
+                    <!--<span>The Secure Data Commons is an online analytic portal for transportation researchers.-->
+                        <!--On this portal, researchers can take advantage of pre-established programming environments to-->
+                        <!--access and analyze a growing set of transportation-related data sets.-->
+                        <!--The SDC platform provides a collaborative environment for traffic engineers,-->
+                        <!--researchers, data scientists and anyone who is interested in carrying out research and analysis on-->
+                        <!--different datasets related to traffic, weather, crashes etc.-->
+                    <!--</span>-->
+                <!--</div>-->
+            <!--</mat-card-content>-->
+        <!--</div>-->
+    <!--</mat-card>-->
+<!--</div>-->
+
+
 <div class="container">
     <div class="row">
-    <img style="width: 100%" src="../../assets/images/background-home.png" class="mx-auto d-block">
+        <div class="col-md-12">
+            <img style="width: 100%" src="../../assets/images/background_about.jpg" class="mx-auto d-block">
+        </div>
+    </div>
+
+    <div class="row" style="padding-top: 15px;">
+        <div class="col-md-4">
+            <mat-card class="card">
+                <mat-card-title class="cardTitle">About SDC</mat-card-title>
+                <!--<a (click)="internalRoute('home','curated')" style="width: 50%">Learn More</a>-->
+
+                <mat-card-content class="cardContent">The Secure Data Commons is an online analytic portal for transportation researchers. On this portal, researchers can take advantage of pre-established programming environments to access and analyze a growing set of transportation-related data sets.
+                </mat-card-content>
+                <mat-card-actions>
+                    <div class="cardBtn">
+                        <button class="btn-default" [routerLink]="['/about']" style="width: 50%">Learn More</button>
+                    </div>
+                </mat-card-actions>
+            </mat-card>
+        </div>
+        <div class="col-md-4">
+            <mat-card class="card">
+                <mat-card-title class="cardTitle">Datasets</mat-card-title>
+                <mat-card-content class="cardContent">Check out the list of current datasets that
+                    are available on SDC platform and learn how
+                    to get access to those datasets
+                </mat-card-content>
+                <mat-card-actions>
+                    <div class="cardBtn">
+                        <button class="btn-default" [routerLink]="['/datasetinfo']" style="width: 50%">Learn More</button>
+                    </div>
+                </mat-card-actions>
+            </mat-card>
+        </div>
+        <div class="col-md-4">
+            <mat-card class="card">
+                <mat-card-title class="cardTitle">Sign up</mat-card-title>
+                <mat-card-content class="cardContent">Complete our online
+                    access request form and when you are
+                    approved you can begin creating your very
+                    own data analysis environments!
+                </mat-card-content>
+                <mat-card-actions>
+                    <div class="cardBtn">
+                        <button class="btn-default" [routerLink]="['/register']" style="width: 50%">Learn More</button>
+
+                    </div>
+                </mat-card-actions>
+            </mat-card>
+        </div>
     </div>
 </div>
