--- a/webportal/webapp/src/app/main/about/about.component.css
+++ b/webportal/webapp/src/app/main/about/about.component.css
@@ -1,18 +1,7 @@
-
-.cardBtn {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: -20px;
-}
-.card {
-    height: 220px;
-    background-color: #f8f8f8;
-    margin-bottom: 10px;
-}
-.cardContent {
-    height: 120px;
-}
-.cardTitle {
-    margin-top: -15px !important;
+.info {
+    text-align: left;
+    padding-top: 25px;
+    font-size: 16px;
+    color: rgb(52, 73, 95);
+    padding: 40px;
 }
