--- a/webportal/webapp/src/app/main/main.component.html
+++ b/webportal/webapp/src/app/main/main.component.html
@@ -6,9 +6,9 @@
         <!--<a class="brand-name" style="width: 15%;float: left;margin: 5px 0;">-->
           <!--<img style="margin-top: 8px;" class="img-responsive2" src="../assets/images/dot-logo-white.png" alt="Logo">-->
         <!--</a>-->
-        <div style=" float: left;width: 85%;padding: 18px 0px;margin-left: -15px">
+        <div style=" float: left;width: 85%;padding: 18px 0px;margin-left: -15px; cursor: pointer ">
           <!--<span style="font-weight: 700;">U.S. Department of Transportation</span><br/>-->
-          <span class="logo">Secure Data Commons Platform</span>
+          <span class="logo" [routerLink]="['/home']">Secure Data Commons Platform</span>
         </div>
       </div>
 
@@ -19,7 +19,7 @@
             <a class="nav-link" [routerLink]="['/about']">ABOUT &emsp; &nbsp;|</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['active']">
-            <a class="nav-link" [routerLink]="['/home']">DATASETS &emsp; &nbsp;|</a>
+            <a class="nav-link" [routerLink]="['/datasetinfo']">DATASETS &emsp; &nbsp;|</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['active']">
             <a class="nav-link" [routerLink]="['/register']">REGISTER / LOGIN</a>
