--- a/webportal/webapp/src/app/account/faq/faq.component.html
+++ b/webportal/webapp/src/app/account/faq/faq.component.html
@@ -1,3 +1,188 @@
-<p>
-  faq works!
-</p>
+
+<div class="container">
+    <mat-card class="info">
+        <div class="row">
+            <h3>Frequently Asked Questions</h3>
+            <mat-card-content>
+
+                <div class="push-top-40" id="sdcInfo">
+                    <ul>
+                        <h4>1) What is Secure Data Commons Platform?</h4>
+                        <p>The Secure Data Commons is an online analytic portal for transportation researchers. On this
+                            portal, researchers can take advantage of pre-established programming environments to access
+                            and analyze a growing set of transportation-related data sets.
+                        </p>
+                        <p>
+                            The SDC platform provides a collaborative environment for traffic engineers, researchers,
+                            data scientists and anyone who is interested in carrying out research and analysis on
+                            different datasets related to traffic, weather, crashes etc.
+                        </p>
+                    </ul>
+                </div> <hr>
+
+                <div class="push-top-40" id="sdcAccess">
+                    <ul>
+                        <h4>2) How can I get access to the SDC portal?</h4>
+                        <span>
+                            <li class="push-top-30">Go to https://portal.securedatacommons.com URL</li>
+                        </span>
+                        <span>
+                            <li class="push-top-30">Go to ‘Register/Login’  menu tab</li>
+                            <img src="../../assets/images/faq_image/SignUp-1.png" class="mx-auto d-block width-70">
+                        </span>
+                        <span>
+                            <li class="push-top-30">Please download the access request form and fill out the required details and send an email to support@securedatacommons.com</li>
+                            <img src="../../assets/images/faq_image/SignUp-2.png" class="mx-auto d-block width-70">
+                        </span>
+                        <span>
+                            <li class="push-top-30">Once approved, support team will send you an email with the instructions for accessing the platform.</li>
+                        </span>
+                    </ul>
+                </div> <hr>
+
+                <div class="push-top-40" id="sdcDataset">
+                    <ul>
+                        <h4>3) What is SDC Datasets?</h4>
+                        <p>The dataset types are described as follows:</p>
+                        <span>
+                            <li class="push-top-30"><b>Raw datasets</b></li>
+                            <p>The data stored in its native or original format are referred to as Raw datasets. These datasets could be in structured (databases, logs, financial data etc), semi-structured (HTML, XML, RDF, CSV) and un-structured (images, PDF, docs). This data is unaltered and stored in as-is format. The data can be received through continuous streaming sources (APIs, sensors) or one-time load from external sources</p>
+                            <li class="push-top-30"><b>Curated datasets</b></li>
+                            <p>Data curation is a process of integrating the raw data collected from various sources, annotating the data and presenting it in such a way that the value of the data is maintained overtime and the data remains available for reuse and preservation. Curated datasets enable data discovery and retrieval, maintain quality, add value and provide for re-use over time, for researchers and data scientists. The curation process includes data transformations from unstructured and semi structured formats to a structured format, deduplication of data, data obfuscation, data cleansing etc thus providing high quality of data for researchers to create meaningful insights</p>
+                            <li class="push-top-30"><b>Published datasets</b></li>
+                            <p>Published datasets are created by researchers to disclose their research for other users to verify and reuse them beyond the original purpose for which they were collected. Published datasets are a result of combining analysis on curated datasets available in SDC platform along with other datasets or algorithms that is owned/created by a researcher or data scientist</p>
+                        </span>
+                    </ul>
+                </div> <hr>
+
+                <div class="push-top-40" id="datasetAccess">
+                    <ul>
+                        <h4>4) How can I get access to the SDC Datasets?</h4>
+                        <p>These are datasets that are available within SDC platform that are published / enabled by SDC
+                            team or published by other users. Access to these datasets are available upon request.
+                        </p>
+                        <span>
+                            <li class="push-top-30">Once you are logged in go to tab ‘Dataset’ in menu tab</li>
+                            <img src="../../assets/images/faq_image/Dataset-1.png" class="mx-auto d-block width-70">
+                        </span>
+                        <span>
+                            <li class="push-top-30">Click on ‘SDC Dataset’ Heading. Below this you can see all the available datasets</li>
+                            <img src="../../assets/images/faq_image/Dataset-2.png" class="mx-auto d-block width-70">
+                        </span>
+                        <span>
+                            <li class="push-top-30">To access this datasets, you need to click on ‘Request’ button.</li>
+                        </span>
+                        <span>
+                            <li class="push-top-30">A form will pop up, fill that form and click on ‘Send Request’ button.</li>
+                            <img src="../../assets/images/faq_image/Dataset-3.png" class="mx-auto d-block width-70">
+                        </span>
+                        <span>
+                            <li class="push-top-30">The request will be send to support team and access to the requested dataset will be given.</li>
+                        </span>
+                    </ul>
+                </div> <hr>
+
+                <div class="push-top-40" id="datasetInfo">
+                    <ul>
+                        <h4>5) How will I understand what a particular dataset consist of?</h4>
+                        <span>
+                            <li class="push-top-30">Click on Name of Dataset, you can see README of that particular dataset below it.</li>
+                            <img src="../../assets/images/faq_image/dataset-4.png" class="mx-auto d-block width-70">
+                        </span>
+                    </ul>
+                </div> <hr>
+
+                <div class="push-top-40" id="workstationLaunch">
+                    <ul>
+                        <h4>6) How can launch a workstation?</h4>
+                        <span>
+                            <li class="push-top-30">Click on ‘Workstation’ menu tab</li>
+                            <img src="../../assets/images/faq_image/Workstation-1.png" class="mx-auto d-block width-70">
+                        </span>
+                        <span>
+                            <li class="push-top-30">Click on ‘Launch’ button of any workstation which you want to access</li>
+                            <img src="../../assets/images/faq_image/Workstation-2.png" class="mx-auto d-block width-70">
+                        </span>
+                        <span>
+                            <li class="push-top-30">You will be redirected to new tab, in which you can choose the application and start working.</li>
+                            <img src="../../assets/images/faq_image/Workstation-3.png" class="mx-auto d-block width-70">
+                        </span>
+                    </ul>
+                </div> <hr>
+
+                <div class="push-top-40" id="dataStore">
+                    <ul>
+                        <h4>7) Where do I my store data</h4>
+                        <span>
+                            <p>You can store data in your ‘Home Folder’ or ‘Temporary Folder’.</p>
+                            <li class="push-top-30"><b>Home Folder:</b> Data stored in home folder will remain persistent, you can access it on your next login</li>
+                            <li class="push-top-30"><b>Temporary Folder:</b> Data stored in temporary folder will get deleted once you close your session.</li>
+                        </span>
+                    </ul>
+                </div><hr>
+
+                <div class="push-top-40" id="appStream">
+                    <ul>
+                        <h4>8) How can I bring my own datasets/algorithm to my appstream instance?</h4>
+                        <span>
+                            <li class="push-top-30">Navigate to My Workstations page</li>
+                            <img src="../../assets/images/faq_image/Workstation-1.png" class="mx-auto d-block width-70">
+                        </span>
+                        <span>
+                            <li class="push-top-30">Launch the workstation assigned to you, by clicking on the “Launch” button</li>
+                            <img src="../../assets/images/faq_image/Workstation-2.png" class="mx-auto d-block width-70">
+                            <img src="../../assets/images/faq_image/Workstation-3.png" class="mx-auto d-block width-70">
+                        </span>
+                        <span>
+                            <li class="push-top-30">Click on the Upload button as shown below</li>
+                            <img src="../../assets/images/faq_image/Workstation-4.png" class="mx-auto d-block width-70">
+                        </span>
+                        <span>
+                            <li class="push-top-30">Select Home Folder</li>
+                            <img src="../../assets/images/faq_image/Workstation-5.png" class="mx-auto d-block width-70">
+                        </span>
+                        <span>
+                            <li class="push-top-30">In order to upload datasets or algorithm users must click on Home Folder, under which they would  see three sub folders</li>
+                            <p><b>1) datasets –</b> Users should upload their datasets only to this folder, if they wish to see their files under “My Datasets/Algorithms” section in Datasets page and if they wish to publish these datasets to other users</p>
+                            <p><b>2) algorithm –</b> Users should upload their algorithms only to this folder, if they wish to see their files under “My Datasets/Algorithms” section in Datasets page and if they wish to publish their algorithms with other users</p>
+                        </span>
+                    </ul>
+                </div><hr>
+
+                <div class="push-top-40" id="datasetPublish">
+                    <ul>
+                        <h4>9) How can I publish my dataset/algorithm? </h4>
+                        <p>Follow the below steps to publish your datasets / algorithms and share with other SDC
+                            Users.</p>
+                        <span>
+                            <li class="push-top-30">Navigate to Datasets page</li>
+                            <img src="../../assets/images/faq_image/Publish-1.png" class="mx-auto d-block width-70">
+                            <p>1. Click on the upload icon under publish for the dataset/algorithm you wish to publish</p>
+                            <p>2. In the pop-up window that shows up, you will have two options either a Dataset or Algorithm</p>
+                             <span>
+                                <p>a. Select the dropdown value as Dataset and fill the required values</p>
+                                 <img src="../../assets/images/faq_image/Publish-2.png" class="mx-auto d-block width-40">
+                                <p>i. Name - Name of the dataset, which you wish to call it. Users will see your dataset with this name under SDC Datasets section</p>
+                                <p>ii. Description - Provide a short description so users can get an idea about your dataset</p>
+                                <p>iii. File/folder name - Name of the file or folder where your dataset resides in your Home folder. We need this information, so the support team can publish this dataset and make it available to other users</p>
+                                <p>iv. Readme / Data dictionary file name - This file should provide detailed instructions about your dataset, how it was created or any relevant information that helps user to understand and use the dataset. Save this file in your home folder relative to the dataset file/folder name</p>
+                                <p>v. Geographic scope - Indicate the geographic scope for your dataset whether it belongs to a specific state, region, country etc</p>
+                                <p>vi. Start/End Date for data availability - Provide the start and end dates of the data that belongs in your dataset. For example, your dataset may contain data from March 2017 to August 2017</p>
+                             </span>
+
+                             <span>
+                                 <p>b. Select the dropdown value as Algorithm</p>
+                                 <img src="../../assets/images/faq_image/Publish-3.png" class="mx-auto d-block width-40">
+                                <p>i. Name - Enter the name for your algorithm. Users will see your algorithm with this name under SDC Datasets section</p>
+                                <p>ii. Description - Provide a short description about your algorithm</p>
+                                <p>iii. File/Folder name - Name of the file or folder where your algorithm resides in your Home folder. We need this information, so SDC support team can publish this algorithm and make it available to other users</p>
+                                <p>iv. Readme / Data dictionary file name - This file should provide detailed instructions about your algorithm, how it was created or any relevantinformation that helps user to understand and use the algorithm. Save this file in your home folder relative to the algorithm file/folder name</p>
+                                <p>v. Programming Tools/language - Provide the details of programming tools and/or languages that were used to create this algorithm, so users can leverage the same to run your program.</p>
+                             </span>
+                        </span>
+                    </ul>
+                </div>
+            </mat-card-content>
+        </div>
+    </mat-card>
+</div>
