--- a/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
+++ b/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
@@ -4,10 +4,10 @@
   <hr>
   <mat-dialog-content>
       <mat-form-field style='width: 100%'>
-        <textarea matInput name="stateList" id="stateList" placeholder="Enter the list of state" [(ngModel)]="messageModel.stateList" required></textarea>
-          <mat-error *ngIf="!messageModel.stateList">Required</mat-error>
-        <mat-hint> Provide comma separated state name (e.g. KN, VI)</mat-hint>
+        <textarea matInput name="stateList" id="stateList" placeholder="Enter the state(s) for which you would like to request access." [(ngModel)]="messageModel.stateList" required></textarea>
+          <mat-error align="end" *ngIf="!messageModel.stateList">Required</mat-error>
       </mat-form-field>
+      <p style="margin-top: -15px;color: gray;"> use commas when requesting multiple states (e.g. KN, VI)</p>
 
   </mat-dialog-content>
   <hr>
@@ -35,22 +35,22 @@
 
     <mat-form-field style='width: 100%'>
       <input matInput placeholder="Name" [(ngModel)]="messageModel.name" value="{{messageModel.name}}" required>
-      <mat-error *ngIf="!messageModel.name">Required</mat-error>
+      <mat-error align="end" *ngIf="!messageModel.name">Required</mat-error>
     </mat-form-field>
 
     <mat-form-field style='width: 100%'>
       <input matInput placeholder="Description" [(ngModel)]="messageModel.description" value="{{messageModel.description}}" required>
-      <mat-error *ngIf="!messageModel.description">Required</mat-error>
+      <mat-error align="end" *ngIf="!messageModel.description">Required</mat-error>
     </mat-form-field>
 
     <mat-form-field style='width: 100%'>
       <input matInput placeholder="File/folder name" [(ngModel)]="messageModel.fileFolderName" value="{{messageModel.fileFolderName}}" required>
-      <mat-error *ngIf="!messageModel.fileFolderName">Required</mat-error>
+      <mat-error align="end" *ngIf="!messageModel.fileFolderName">Required</mat-error>
     </mat-form-field>
 
     <mat-form-field style='width: 100%'>
       <input matInput placeholder="Readme / Data dictionary file name" [(ngModel)]="messageModel.readmeFileName" value="{{messageModel.readmeFileName}}" required>
-      <mat-error *ngIf="!messageModel.readmeFileName">Required</mat-error>
+      <mat-error align="end" *ngIf="!messageModel.readmeFileName">Required</mat-error>
     </mat-form-field>
 
     <mat-form-field style='width: 100%' *ngIf="messageModel.type == 'dataset'">
@@ -59,12 +59,12 @@
     </mat-form-field>
     <mat-form-field style='width: 100%' *ngIf="messageModel.type == 'dataset'">
       <input matInput placeholder="Start/End Date for Data Availability" [(ngModel)]="messageModel.dataAvailability" value="{{messageModel.dataAvailability}}" required>
-      <mat-error *ngIf="!messageModel.dataAvailability">Required</mat-error>
+      <mat-error align="end" *ngIf="!messageModel.dataAvailability">Required</mat-error>
     </mat-form-field>
 
     <mat-form-field style='width: 100%' *ngIf="messageModel.type == 'algorithm'">
       <input matInput placeholder="Programming Tools/language" [(ngModel)]="messageModel.ProgrammingTool" value="{{messageModel.ProgrammingTool}}" required>
-      <mat-error *ngIf="!messageModel.ProgrammingTool">Required</mat-error>
+      <mat-error align="end" *ngIf="!messageModel.ProgrammingTool">Required</mat-error>
     </mat-form-field>
 
   </mat-dialog-content>
