some minor changes

--- a/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
+++ b/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
@@ -7,7 +7,7 @@
         <textarea matInput name="stateList" id="stateList" placeholder="Enter the state(s) for which you would like to request access." [(ngModel)]="messageModel.stateList" required></textarea>
           <mat-error align="end" *ngIf="!messageModel.stateList">Required</mat-error>
       </mat-form-field>
-      <p style="margin-top: -15px;color: gray;"> use commas when requesting multiple states (e.g. KN, VI)</p>
+      <p style="margin-top: -15px;color: #a09e9e;font-size: 12px;"> use commas when requesting multiple states (e.g. KN, VI)</p>
 
   </mat-dialog-content>
   <hr>
