change launch button css

--- a/webportal/webapp/src/app/account/workstation/workstation.component.html
+++ b/webportal/webapp/src/app/account/workstation/workstation.component.html
@@ -38,7 +38,8 @@
                 </div>
               </td>
               <td>
-                <button class="btn btn-primary dotBtn" (click)="launchWorkstation(stack)">Launch</button>
+                <!--<button class="btn btn-primary dotBtn" (click)="launchWorkstation(stack)">Launch</button>-->
+                <a style="cursor: pointer;" (click)="launchWorkstation(stack)"> Launch </a>
               </td>
             </tr>
           </ng-template>
